some fixes when obj are undefined

--- a/index.html
+++ b/index.html
@@ -63,3 +63,5 @@ if __name__ == "__main__":
 # Additional Implementation 1760488786
 
 # Code Update 1760488786-28048
+
+# Additional Implementation 1760488786
