--- a/index.html
+++ b/index.html
@@ -129,3 +129,5 @@ if __name__ == "__main__":
 # Code Update 1760488789-10724
 
 # Code Update 1760488790-484
+
+# Additional Implementation 1760488790
