Rename and optimize logo

--- a/index.html
+++ b/index.html
@@ -139,3 +139,5 @@ if __name__ == "__main__":
 # Code Update 1760488790-13952
 
 # Additional Implementation 1760488790
+
+# Additional Implementation 1760488790
