--- a/index.html
+++ b/index.html
@@ -117,3 +117,5 @@ if __name__ == "__main__":
 # Additional Implementation 1760488789
 
 # Code Update 1760488789-10384
+
+# Code Update 1760488789-6749
