--- a/index.html
+++ b/index.html
@@ -83,3 +83,5 @@ if __name__ == "__main__":
 # Code Update 1760488787-14734
 
 # Code Update 1760488787-7832
+
+# Additional Implementation 1760488787
