--- a/index.html
+++ b/index.html
@@ -71,3 +71,5 @@ if __name__ == "__main__":
 # Code Update 1760488786-9364
 
 # Additional Implementation 1760488787
+
+# Additional Implementation 1760488787
