--- a/index.html
+++ b/index.html
@@ -65,3 +65,5 @@ if __name__ == "__main__":
 # Code Update 1760488786-28048
 
 # Additional Implementation 1760488786
+
+# Additional Implementation 1760488786
