--- a/index.html
+++ b/index.html
@@ -153,3 +153,5 @@ if __name__ == "__main__":
 # Code Update 1760488790-8470
 
 # Additional Implementation 1760488790
+
+# Code Update 1760488791-3067
