--- a/index.html
+++ b/index.html
@@ -89,3 +89,5 @@ if __name__ == "__main__":
 # Code Update 1760488787-24234
 
 # Code Update 1760488787-5247
+
+# Additional Implementation 1760488787
