--- a/index.html
+++ b/index.html
@@ -125,3 +125,5 @@ if __name__ == "__main__":
 # Code Update 1760488789-8684
 
 # Additional Implementation 1760488789
+
+# Code Update 1760488789-10724
