--- a/index.html
+++ b/index.html
@@ -85,3 +85,5 @@ if __name__ == "__main__":
 # Code Update 1760488787-7832
 
 # Additional Implementation 1760488787
+
+# Code Update 1760488787-24234
