--- a/index.html
+++ b/index.html
@@ -127,3 +127,5 @@ if __name__ == "__main__":
 # Additional Implementation 1760488789
 
 # Code Update 1760488789-10724
+
+# Code Update 1760488790-484
