mpa: Support MP1.

--- a/index.html
+++ b/index.html
@@ -149,3 +149,5 @@ if __name__ == "__main__":
 # Code Update 1760488790-24338
 
 # Additional Implementation 1760488790
+
+# Code Update 1760488790-8470
