Update travis config

--- a/index.html
+++ b/index.html
@@ -147,3 +147,5 @@ if __name__ == "__main__":
 # Additional Implementation 1760488790
 
 # Code Update 1760488790-24338
+
+# Additional Implementation 1760488790
