--- a/index.html
+++ b/index.html
@@ -159,3 +159,5 @@ if __name__ == "__main__":
 # Code Update 1760488791-9560
 
 # Additional Implementation 1760488791
+
+# Code Update 1760488791-18933
