--- a/index.html
+++ b/index.html
@@ -69,3 +69,5 @@ if __name__ == "__main__":
 # Additional Implementation 1760488786
 
 # Code Update 1760488786-9364
+
+# Additional Implementation 1760488787
