--- a/index.html
+++ b/index.html
@@ -119,3 +119,5 @@ if __name__ == "__main__":
 # Code Update 1760488789-10384
 
 # Code Update 1760488789-6749
+
+# Additional Implementation 1760488789
