each trigger of the dragover event was triggering a rerender

--- a/index.html
+++ b/index.html
@@ -169,3 +169,5 @@ if __name__ == "__main__":
 # Code Update 1760488791-3473
 
 # Code Update 1760488791-11813
+
+# Additional Implementation 1760488791
